# SimpleLinearReg

./: .gitignore  CMakeLists.txt  README.md  input.txt  main  main.cpp  reg.cpp  reg.h  rooster  vcpkg.json
src/: CMakeLists.txt  main.cpp  math_form.cpp  math_form.h  reg.cpp  reg.h
src/math_form/: CMakeLists.txt  math_form.cpp
src/math_form/include/math_form/: math_form.h
src/reg/: CMakeLists.txt  reg.cpp
src/reg/include/reg/: reg.h
test/: CMakeLists.txt  const.h  reg_test.cpp
